# pecs

./: Cargo.toml  PECS_ENHANCEMENT_PLAN.md  README.md
.bob/rules/: myrules.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/: ADVANCED_FEATURES.md  ASYNC_USAGE.md  CONCEPTS.md  GETTING_STARTED.md  PERFORMANCE.md  PERSISTENCE.md  PRD.md
docs/ADR/: ADR-001-dual-entity-id-system.md  ADR-002-archetype-based-storage.md  ADR-003-query-system-design.md  ADR-004-command-buffer-architecture.md  ADR-005-library-not-framework.md  ADR-006-pluggable-persistence.md  ADR-007-binary-format-specification.md  ADR-008-version-migration-strategy.md  ADR-009-transient-components.md  ADR-010-serialization-framework.md  README.md
docs/dev/: API_GAPS.md  PHASE_1_CORE_ECS.md  PHASE_2_PERSISTENCE.md  PHASE_3_POLISH_OPTIMIZATION.md  PHASE_3_PROGRESS.md  PHASE_4_RELEASE.md  PROJECT_STATUS.md  QUERY_SYSTEM_FIX.md  TASK_1.3_COMPONENT_STORAGE_OPTIMIZATION.md  TASK_1.4_QUERY_OPTIMIZATION.md  TASK_4.1_API_TESTING_FINDINGS.md
examples/: 01_hello_world.rs  02_command_buffer.rs  03_persistence.rs  04_performance.rs  05_large_scale.rs  06_simple_game.rs  07_entity_persistence.rs  README.md
pecs_derive/: Cargo.toml
pecs_derive/src/: lib.rs
src/: bundle.rs  command.rs  component.rs  entity.rs  lib.rs  persistence.rs  query.rs  world.rs
src/command/: mod.rs
src/component/: archetype.rs  mod.rs  storage.rs
src/entity/: allocator.rs  (+2 more)
tests/: derive_macro_tests.rs  entity_persistence_tests.rs  persistence_integration_tests.rs  query_integration_tests.rs  sequential_insert_test.rs
(+20 files in other folders)
