[package]
name = "pecs"
description = "Persistant Entity Component System"
version = "0.1.0"
edition = "2024"

[dependencies]
pecs_derive = { path = "pecs_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
